--- a/operations/contoso_supermarket/release/seattle/seattle.yaml
+++ b/operations/contoso_supermarket/release/seattle/seattle.yaml
@@ -12,10 +12,7 @@ spec:
     spec:
       chart: ./operations/contoso_supermarket
   values:
-    acr_name: agacreaa22
-    branch_name: "production"
-    image_tag: "v1.0"
-    github_User: brauliomsft
+    github_User: agoraedge
     queue_monitoring:
       timezone: "Pacific Standard Time"
     postgres:
