--- a/operations/contoso_supermarket/templates/initDB.yaml
+++ b/operations/contoso_supermarket/templates/initDB.yaml
@@ -38,7 +38,7 @@ spec:
           - name: init-db-sql
             mountPath: /var/initdb.sql
             subPath: initDB.sql
-      restartPolicy: "Never"
+      restartPolicy: "OnFailure"
       volumes:
         - name: init-db-sql
           configMap:
@@ -46,7 +46,4 @@ spec:
             items:
             - key: initDB.sql
               path: initDB.sql
-  dependsOn:
-    - name: {{ .Release.Name }}-contosodb
-      condition: "Ready"
         
