Changed DB Username

--- a/operations/contoso_supermarket/release/seattle/seattle.yaml
+++ b/operations/contoso_supermarket/release/seattle/seattle.yaml
@@ -16,7 +16,7 @@ spec:
     queue_monitoring:
       timezone: "Pacific Standard Time"
     postgres:
-      username: "postgres"
+      username: "admin"
       database: "contoso"
     cosmos:
       container: "pos"
