--- a/operations/contoso_supermarket/release/seattle/seattle.yaml
+++ b/operations/contoso_supermarket/release/seattle/seattle.yaml
@@ -23,7 +23,7 @@ spec:
       database: "contoso"
       endpoint: https://builddemo.documents.azure.com:443/
     point_of_sale:
-      title: "Contoso Supermarket"
+      title: "Contoso Supermarket v1"
       cameras_enabled: "False"
       cameras_url: ""
       new_category: "True"
