--- a/operations/contoso_supermarket/values.yaml
+++ b/operations/contoso_supermarket/values.yaml
@@ -7,11 +7,11 @@ cosmos:
   database: "contoso" 
 
 point_of_sale:
-  title: "Contoso Supermarket"
+  title: "Contoso Supermarket v1.0"
   cameras_enabled: "False"
   cameras_url: ""
   new_category: "True"
   holiday_banner: "False"
 
 queue_monitoring_frontend:
-  live_view_enabled: "False"
+  live_view_enabled: "True"
